Adding latex report folder

--- a/report/Tarefas/algoritmo_simulacao.tex
+++ b/report/Tarefas/algoritmo_simulacao.tex
@@ -2,7 +2,7 @@
 \section{Algoritmo de Simulação}
 
 O algoritmo que representa a simulação do circuito lógico é 
-apresentado em \textit{algorithm \space \ref{alg:simulacao}}.
+apresentado no \textit{algorithm \space \ref{alg:simulacao}}.
 
 \BlankLine
 
