--- a/report/main.tex
+++ b/report/main.tex
@@ -83,7 +83,7 @@
 	\subfile{Tarefas/descricao_geral}
 	\subfile{Tarefas/ambiente_desenvolvimentoral}
 	\subfile{Tarefas/algoritmo_simulacao}
-	\subfile{Tarefas/teste}
+	\subfile{Tarefas/testes}
 	\subfile{Tarefas/consideracoes_aprendizado.tex}
 	
 	% \let\Section\section\def\section*#1{\Section{#1}}
