--- a/report/Tarefas/introducao.tex
+++ b/report/Tarefas/introducao.tex
@@ -1,10 +1,9 @@
 \section{Introdução}
 
 Este relatório tem o propósito de apresentar o resultado do projeto 1 da 
-disciplina "MO601 - Arquitetura de Computadores II" ministrada pelo Prof. Rodoldo Jardim de Azevedo, cujo 
-objetivo é a implementação e testes de um simulador super básico de circuitos lógicos.
-
+disciplina Arquitetura de Computadores II (MO601) \space ministrada pelo Prof. Rodoldo Jardim de Azevedo, cujo 
+objetivo é a implementação e testes de um simulador super básico de circuitos lógicos. 
 A seção 2 apresenta a descrição geral do projeto, a seção 3 relaciona as tecnologias utilizadas 
 no ambiente de desenvolvimento, a seção 4 apresenta 
-o algoritmo de simulação do circuito lógico, a seção 5 detalha como os testes foram realizados e, 
-ao final, as considerações sobre o aprendizado.
+o algoritmo de simulação de circuitos lógicos, a seção 5 detalha a forma como os testes foram realizados e 
+a seção 6 apresenta as considerações sobre o aprendizado nesse projeto.
