--- a/report/Tarefas/testes.tex
+++ b/report/Tarefas/testes.tex
@@ -8,8 +8,9 @@ longo do tempo (valores de variáveis e/ou indicadores de tempo),
 os arquivos com as saídas esperadas (\textit{esperado0.csv e esperado1.csv}) e os arquivos resultantes da simulação 
 (\textit{saida0.csv e saida1.csv}).
 
-Novos testes podem ser adicionados à pasta de testes (\textit{/test}), contudo o simulador exige a
-existencia dos arquivos \textit{circuito.hdl} e \textit{estimulos.txt}.
+Novos testes podem ser adicionados à pasta principal de testes (\textit{/test}), contudo o simulador exige a
+existência dos arquivos \textit{circuito.hdl} e \textit{estimulos.txt}. Além disso, não existe limite para a quantidade 
+de testes incluídos, sendo que o simulador processará todos aqueles que existirem na pasta principal de testes.
 
 Durante a simulação dos testes, conforme pode-se observar no \textit{algorithm \ref{alg:simulacao}}, 
 todas as pastas de testes específicos são consideradas, seus arquivos de entrada são 
